--- a/templates/view.html
+++ b/templates/view.html
@@ -4,7 +4,6 @@
     <title>Module Name</title>
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
 </head>
-
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -18,10 +17,10 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li><a href="#" class='btn-now-showing'>Now Showing</a></li>
-              <li><a href="#" class='btn-upcoming'>Upcoming</a></li>
-              <li><a href="#" class='btn-popular'>Popular</a></li>
-              <li><a href="#" class='btn-top-rated'>Top Rated</a></li>
+              <li><a href="/" class='btn-now-showing'>Now Showing</a></li>
+              <li><a href="/" class='btn-upcoming'>Upcoming</a></li>
+              <li><a href="/" class='btn-popular'>Popular</a></li>
+              <li><a href="/" class='btn-top-rated'>Top Rated</a></li>
             </ul>
             <form class="navbar-form navbar-right" role="search" id='form-search'>
                 <div class="form-group">
@@ -45,7 +44,7 @@
             <h3><strong>| Casts |</strong></h3>
             <div id="casts" style="text-align:center"></div>
             <hr>
-            <h3><strong>| Similer Movies |</strong></h3>
+            <h3><strong>| Similar Movies |</strong></h3>
             <div id="similar" style="text-align:center"></div>
         </div>
        <div class='row movies-list' style="display:none">
@@ -70,7 +69,7 @@
             <h3><strong>| Casts |</strong></h3>
             <div id="casts" style="text-align:center"></div>
             <hr>
-            <h3><strong>| Similer Movies |</strong></h3>
+            <h3><strong>| Similar Movies |</strong></h3>
             <div id="similar" style="text-align:center"></div>
         </div>
        <div class='row movies-list' style="display:none">
