--- a/templates/main.html
+++ b/templates/main.html
@@ -47,13 +47,15 @@
     <script src="/static/js/app.js"></script>
 {%raw%}
   <script type="text/x-handlers-template" id="tpl-tweet">
-      <div class="col-md-4 portfolio-item">
+      <div class="col-md-6 portfolio-item">
       <a href="/view/{{movie-id}}">
-      <img class="img-responsive" src={{imageSrc}} style = "width: 500; height: 500;">
+      <img class="img-responsive" style = "width: 210px; height: 200px; position: absolute; margin-top:300px; margin-left:24" src="{{imageSrc}}" alt="">
+      <img class="img-responsive" style = "width: 500px; height: 500px;" src="{{bdrop}}" alt="">
       </a>
-      <h3>
-      <a href="/view/{{movie-id}}">  {{title}} </a>
-      </h3>
+     <h3><center><font face="Maiandra GD">
+         <a href="/view/{{movie-id}}" style="color:blue"> + {{title}} +</a>
+      </font></center></h3>
+      <ul class id="{{movie-id}}"> </ul>
       </div>
       </script>
 {%endraw%}
